--- a/fdisk/cfdisk.8
+++ b/fdisk/cfdisk.8
@@ -418,7 +418,9 @@ command (above) for more information on the print formats.
 0: No errors; 1: Invocation error; 2: I/O error;
 3: cannot get geometry; 4: bad partition table on disk.
 .SH "SEE ALSO"
-fdisk(8)
+.BR fdisk (8),
+.BR parted (8),
+.BR sfdisk (8)
 .SH BUGS
 The current version does not support multiple disks.
 .SH AUTHOR
