--- a/fdisk/fdisk.8
+++ b/fdisk/fdisk.8
@@ -225,3 +225,7 @@ The option `dump partition table to file' is missing.
 .\" Jakub Jelinek (jj@sunsite.mff.cuni.cz)
 .\" Andreas Neuper (ANeuper@GUUG.de)
 .\" and many others.
+.SH "SEE ALSO"
+.BR cfdisk (8),
+.BR parted (8),
+.BR sfdisk (8)
