--- a/fdisk/sfdisk.8
+++ b/fdisk/sfdisk.8
@@ -512,6 +512,13 @@ A corresponding interactive
 (with curses interface) is still lacking.
 .LP
 There are too many options.
+.LP
+There is no support for non-DOS partition types.
 
 .SH AUTHOR
 A. E. Brouwer (aeb@cwi.nl)
+
+.SH "SEE ALSO"
+.BR cfdisk (8),
+.BR fdisk (8),
+.BR parted (8)
